--- a/app/src/main/res/layout/activity_car_detail.xml
+++ b/app/src/main/res/layout/activity_car_detail.xml
@@ -78,6 +78,7 @@
             </RelativeLayout>
 
             <TextView
+                android:id="@+id/tv_vname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="14dp"
@@ -140,6 +141,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/tv_advise"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingLeft="12dp"
