库存管理改列表， 车辆热度

--- a/app/src/main/res/layout/activity_inventory_manage.xml
+++ b/app/src/main/res/layout/activity_inventory_manage.xml
@@ -46,164 +46,12 @@
         android:textSize="14dp"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/ll_in_sale"
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_store_manager"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:background="#FFFFFF"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/iv_background">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="在售"
-            android:textColor="#333333"
-            android:textSize="16sp" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:layout_weight="1"
-            android:gravity="right"
-            android:text="22辆"
-            android:textColor="#999999"
-            android:textSize="16sp" />
-
-        <ImageView
-            android:layout_width="14dp"
-            android:layout_height="14dp"
-            android:src="@mipmap/more_gray" />
-
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#F5F5F5"
-        app:layout_constraintTop_toBottomOf="@+id/ll_in_sale" />
-
-    <LinearLayout
-        android:id="@+id/ll_has_put_away"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:background="#FFFFFF"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/ll_in_sale">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="已上架"
-            android:textColor="#333333"
-            android:textSize="16sp" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:layout_weight="1"
-            android:gravity="right"
-            android:text="22辆"
-            android:textColor="#999999"
-            android:textSize="16sp" />
-
-        <ImageView
-            android:layout_width="14dp"
-            android:layout_height="14dp"
-            android:src="@mipmap/more_gray" />
-
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#F5F5F5"
-        app:layout_constraintTop_toBottomOf="@+id/ll_has_put_away" />
-
-    <LinearLayout
-        android:id="@+id/ll_has_reserve"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_marginTop="1dp"
-        android:background="#FFFFFF"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/ll_has_put_away">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="已预定"
-            android:textColor="#333333"
-            android:textSize="16sp" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:layout_weight="1"
-            android:gravity="right"
-            android:text="22辆"
-            android:textColor="#999999"
-            android:textSize="16sp" />
-
-        <ImageView
-            android:layout_width="14dp"
-            android:layout_height="14dp"
-            android:src="@mipmap/more_gray" />
-
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#F5F5F5"
-        app:layout_constraintTop_toBottomOf="@+id/ll_has_reserve" />
-
-    <LinearLayout
-        android:id="@+id/ll_has_sell"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_marginTop="1dp"
-        android:background="#FFFFFF"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/ll_has_reserve">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="已售"
-            android:textColor="#333333"
-            android:textSize="16sp" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="20dp"
-            android:layout_weight="1"
-            android:gravity="right"
-            android:text="22辆"
-            android:textColor="#999999"
-            android:textSize="16sp" />
-
-        <ImageView
-            android:layout_width="14dp"
-            android:layout_height="14dp"
-            android:src="@mipmap/more_gray" />
-
-    </LinearLayout>
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_background" />
 
 </android.support.constraint.ConstraintLayout>
