--- a/app/src/main/res/drawable/text_color_radio_selector.xml
+++ b/app/src/main/res/drawable/text_color_radio_selector.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/color_FF5754" android:state_checked="true" />
-    <item android:drawable="@color/color_333333" />
+    <item android:color="@color/color_333333" android:state_checked="false" />
+    <item android:color="@color/color_FF5754"  android:state_checked="true" />
 
 </selector>
