--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,4 +23,15 @@
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 
+
+    <style name="vehicleheat_radio_button">
+        <item name="android:textColor">@drawable/text_color_radio_selector</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:button">@null</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
+
 </resources>
