--- a/app/src/main/res/layout/activity_inventory_manage.xml
+++ b/app/src/main/res/layout/activity_inventory_manage.xml
@@ -52,6 +52,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_background" />
+        app:layout_constraintTop_toBottomOf="@+id/iv_background"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="0dp" />
 
 </android.support.constraint.ConstraintLayout>
