--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -171,6 +171,7 @@
         android:orientation="vertical"
         >
         <RelativeLayout
+            android:id="@+id/rl_user_infor"
             android:layout_width="match_parent"
             android:layout_height="50dp">
 
