--- a/app/src/main/res/layout/item_tag_create_time.xml
+++ b/app/src/main/res/layout/item_tag_create_time.xml
@@ -3,7 +3,7 @@
     android:layout_width="76dp"
     android:layout_height="30dp"
     android:layout_margin="@dimen/dimens_5dp"
-    android:background="@drawable/bg_edit_text_selector"
+    android:background="@drawable/bg_rb_selector"
     android:gravity="center"
     android:text="@string/app_name"
     android:textColor="@drawable/text_color_radio_selector"
