--- a/app/src/main/res/layout/activity_add_saler.xml
+++ b/app/src/main/res/layout/activity_add_saler.xml
@@ -59,6 +59,7 @@
             android:textSize="13dp" />
 
         <EditText
+            android:id="@+id/et_account"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -85,6 +86,7 @@
             android:textSize="13dp" />
 
         <EditText
+            android:id="@+id/et_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -134,6 +136,7 @@
             android:layout_marginLeft="14dp">
 
         <ImageView
+            android:id="@+id/iv_head"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="center"
@@ -169,6 +172,7 @@
             android:textSize="13dp" />
 
         <EditText
+            android:id="@+id/et_sale_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -179,6 +183,7 @@
             android:textSize="13dp" />
 
         <TextView
+            android:id="@+id/tv_address_book"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -212,6 +217,7 @@
             android:textSize="13dp" />
 
         <EditText
+            android:id="@+id/et_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -246,6 +252,7 @@
             android:textSize="13dp" />
 
         <EditText
+            android:id="@+id/et_wechat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -263,5 +270,17 @@
         android:background="#F5F5F5"
         android:layout_marginLeft="14dp"
         android:layout_marginRight="14dp"/>
+
+
+    <Button
+        android:id="@+id/btn_save"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:text="保存"
+        android:gravity="center"
+        android:layout_margin="20dp"
+        android:background="@mipmap/home_bg"
+        android:textColor="#FFFFFF"
+        android:textSize="14sp"/>
 
 </LinearLayout>
