--- a/app/src/main/res/layout/activity_choose_model.xml
+++ b/app/src/main/res/layout/activity_choose_model.xml
@@ -68,7 +68,7 @@
         android:id="@+id/mainlayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"
+        android:layout_alignParentBottom="true"
         >
 
     <LinearLayout
